--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^1.2.4",
     "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "gulp-webpack": "^1.5.0",
     "jquery": "^3.2.1",
     "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "postcss-pxtorem": "^4.0.1",
